feat: create task accordion and accordion popup modal for performing action on list item

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --text-primary: #000;
   --text-secondary: #fff;
   --icon-color: #191919;
+  --bg-gray-3: #19191908;
   --text-gray: #191919;
   --text-gray-3: #1919194d;
   --text-gray-4: #19191966;
