style: add light white shade in root

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --primary-color: #fff;
   --secondary-color: #4772fa;
   --light-white: #f3f3f3;
+  --light-white-f7: #f7f7f7;
   --text-primary: #000;
   --text-secondary: #fff;
   --icon-color: #191919;
